working on about us

--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -3,7 +3,10 @@
 		<div class="row mb64 mb-xs-24">
 			<div class="col-sm-12">
 				<a href="#">
-					<img alt="logo" class="image-xxs" src="img/logo-light.png">
+					<svg style="height:auto;max-height:100px" preserveAspectRatio="xMidYMid meet"  class="image-xxs">
+							<image xlink:href="img/logos/atom-white.svg" width="100%" height="100%"/>
+						</svg>
+					
 				</a>
 			</div>
 		</div>
@@ -11,17 +14,17 @@
 			<div class="col-md-3 col-sm-4">
 				<ul>
 					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Home</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">About</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Features</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Pricing</h5></a></li>
+					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">About Us</h5></a></li>
+					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Contacts</h5></a></li>
+					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Projects</h5></a></li>
 				</ul>
 			</div>
 		
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Press</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">FAQ</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Contact</h5></a></li>
+					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Blog</h5></a></li>
+					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Presskit</h5></a></li>
+					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover"></h5></a></li>
 				</ul>
 			</div>
 		
@@ -30,15 +33,15 @@
 				<ul class="list-inline social-list">
 					<li><a href="#"><i class="ti-twitter-alt"></i></a></li>
 					<li><a href="#"><i class="ti-facebook"></i></a></li>
-					<li><a href="#"><i class="ti-dribbble"></i></a></li>
-					<li><a href="#"><i class="ti-vimeo-alt"></i></a></li>
+					<li><a href="#"><i class="ti ti-linkedin"></i></a></li>
+					<li><a href="#"><i class="ti-instagram"></i></a></li>
 				</ul>
 			</div>
 		</div>
 	
 		<div class="row fade-half">
 			<div class="col-sm-12 text-center">
-				<span>© Copyright 2015 Medium Rare - All Rights Reserved</span>
+				<span>© Copyright 2015 Fermium LABS - All Rights Reserved</span>
 			</div>
 		</div>
 	</div>
