removed # links to avoid htmlproofer errors

--- a/Websites/fermiumlabs_com/_layouts/default.html
+++ b/Websites/fermiumlabs_com/_layouts/default.html
@@ -19,6 +19,8 @@
       document.body.classList.add("animate-out");
     });
     </script>
+    <div id="nothing" style="visibility:hidden">
+    </div>
   </body>
 
 </html>
