--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row mb64 mb-xs-24">
 			<div class="col-sm-12">
-				<a href="#">
+				<a href="#nothing">
 					<svg style="height:auto;max-height:100px" preserveAspectRatio="xMidYMid meet"  class="image-xxs">
 							<image xlink:href="img/logos/atom-white.svg" width="100%" height="100%"/>
 						</svg>
@@ -13,28 +13,28 @@
 		<div class="row mb64 mb-xs-24">
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Home</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">About Us</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Contacts</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Projects</h5></a></li>
+					<li><a href="./index.html"><h5 class="uppercase mb16 fade-on-hover">Home</h5></a></li>
+					<li><a href="./about-us.html"><h5 class="uppercase mb16 fade-on-hover">About Us</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Contacts</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Projects</h5></a></li>
 				</ul>
 			</div>
 		
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Blog</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover">Presskit</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 fade-on-hover"></h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Blog</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Presskit</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover"></h5></a></li>
 				</ul>
 			</div>
 		
 			<div class="col-md-4 col-md-offset-2 col-sm-4">
 				<p class="lead">Follow Us</p>
 				<ul class="list-inline social-list">
-					<li><a href="#"><i class="ti-twitter-alt"></i></a></li>
-					<li><a href="#"><i class="ti-facebook"></i></a></li>
-					<li><a href="#"><i class="ti ti-linkedin"></i></a></li>
-					<li><a href="#"><i class="ti-instagram"></i></a></li>
+					<li><a href="#nothing"><i class="ti-twitter-alt"></i></a></li>
+					<li><a href="#nothing"><i class="ti-facebook"></i></a></li>
+					<li><a href="#nothing"><i class="ti ti-linkedin"></i></a></li>
+					<li><a href="#nothing"><i class="ti-instagram"></i></a></li>
 				</ul>
 			</div>
 		</div>
