--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -22,20 +22,20 @@
 			</div>
 			<div class="offscreen-container bg-dark text-center">
 				<div class="close-nav">
-					<a href="#">
+					<a href="#nothing">
 						<i class="ti-close"></i>
 					</a>
 				</div>
 				<div class="v-align-transform text-center">
-					<a href="#">
+					<a href="#nothing">
 						<svg style="width:100%; height:auto;max-height:200px" preserveAspectRatio="xMidYMid meet"  class="image-xs mb40 mb-xs-24">
 							<image xlink:href="img/logos/atom-white.svg" width="100%" height="100%"/>
 						</svg>
 					</a>
 					<ul class="mb40 mb-xs-24">
-						<li class="fade-on-hover"><a href="#"><h5 class="uppercase mb8">Home</h5></a></li>
-						<li class="fade-on-hover"><a href="#"><h5 class="uppercase mb8">About Us</h5></a></li>
-						<li class="fade-on-hover"><a href="#"><h5 class="uppercase mb8">Contacts</h5></a></li>
+						<li class="fade-on-hover"><a href="./index.html"><h5 class="uppercase mb8">Home</h5></a></li>
+						<li class="fade-on-hover"><a href="./about-us.html"><h5 class="uppercase mb8">About Us</h5></a></li>
+						<li class="fade-on-hover"><a href="#nothing"><h5 class="uppercase mb8">Contacts</h5></a></li>
 					</ul>
 
 				</div>
