removed white bar above the menu button on mobile

--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -3,7 +3,7 @@
 		<div class="row mb64 mb-xs-24">
 			<div class="col-sm-12">
 				<a href="#nothing">
-					<svg style="height:auto;max-height:100px" preserveAspectRatio="xMidYMid meet"  class="image-xxs">
+					<svg style="width:100%;height:auto;max-height:100px" preserveAspectRatio="xMidYMid meet"  class="image-xxs">
 							<image xlink:href="img/logos/atom-white.svg" width="100%" height="100%"/>
 						</svg>
 					
