--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -22,7 +22,7 @@
 			</div>
 			<div class="offscreen-container bg-dark text-center">
 				<div class="close-nav">
-					<a href="#nothing">
+					<a href="#">
 						<i class="ti-close"></i>
 					</a>
 				</div>
