--- a/Websites/fermiumlabs_com/css/custom.css
+++ b/Websites/fermiumlabs_com/css/custom.css
@@ -6,6 +6,9 @@
 4. Animations
 **/
 /** 1. Navigator **/
+
+
+
 nav.fixed.reveal-nav{
 	position:fixed;
 	visibility:visible;
@@ -162,4 +165,24 @@ nav.outOfSight{
 }
 .flip-container:hover .flipper, .flip-container.hover .flipper, .flip-container.flip .flipper {
 	transform: rotateY(180deg);
+}
+
+
+
+@media all and (max-width: 767px){
+.offscreen-container{
+width: 100%;
+}
+.offscreen-container.reveal-nav{
+transform: translate3d(0,0,0);
+-webkit-transform: translate3d(0,0,0);
+}
+}
+
+@media (max-width: 990px){
+.module.widget-handle {
+line-height: 60px;
+min-height: 60px;
+border-top: 0px;
+}
 }
