--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -8,10 +8,10 @@
 					<a href="index.html">
 						<!--<img class="logo logo-light" alt="Foundry" src="img/logos/horizontal-white.svg">
 						<img class="logo logo-dark" alt="Foundry" src="img/logos/horizontal.svg">-->
-						<svg style="width:100%; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-light">
+						<svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-light">
 							<image xlink:href="img/logos/text-only-white.svg" width="100%" height="100%"/>
 						</svg>
-						<svg style="width:100%; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-dark">
+						<svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-dark">
 							<image xlink:href="img/logos/text-only.svg" width="100%" height="100%"/>
 						</svg>
 					</a>
