browsers fixes and cards stuff

--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -22,8 +22,8 @@
 		
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Blog</h5></a></li>
-					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Presskit</h5></a></li>
+					<li><a href="https://blog.fermiumlabs.com/"><h5 class="uppercase mb16 fade-on-hover">Blog</h5></a></li>
+					<li><a href="https://frm.li/presskitgit"><h5 class="uppercase mb16 fade-on-hover">Presskit</h5></a></li>
 					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover"></h5></a></li>
 				</ul>
 			</div>
