fixed menu on mobile scroll

--- a/Websites/fermiumlabs_com/_includes/scripts.html
+++ b/Websites/fermiumlabs_com/_includes/scripts.html
@@ -5,6 +5,7 @@
         <script src="js/flexslider.min.js"></script>
         <script src="js/parallax.js"></script>
         <script src="js/scripts.js"></script>
+				<script src="js/custom.js"></script>
  <script>
     window.addEventListener("beforeunload", function () {
       document.body.classList.add("animate-out");
