--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -1,4 +1,5 @@
-<footer class="footer-2 bg-dark pt96 pt-xs-40">
+<footer class="footer-2 bg-fl pt96 pt-xs-40">
+	
 	<div class="container">
 		<div class="row mb64 mb-xs-24">
 			<div class="col-sm-12">
@@ -13,18 +14,18 @@
 		<div class="row mb64 mb-xs-24">
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="./index.html"><h5 class="uppercase mb16 fade-on-hover">Home</h5></a></li>
-					<li><a href="./about-us.html"><h5 class="uppercase mb16 fade-on-hover">About Us</h5></a></li>
-					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Contacts</h5></a></li>
-					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover">Projects</h5></a></li>
+					<li><a href="./index.html"><h5 class="uppercase mb16 hvr-grow">Home</h5></a></li>
+					<li><a href="./about-us.html"><h5 class="uppercase mb16 hvr-grow">About Us</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 hvr-grow">Contacts</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 hvr-grow">Projects</h5></a></li>
 				</ul>
 			</div>
 		
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="https://blog.fermiumlabs.com/"><h5 class="uppercase mb16 fade-on-hover">Blog</h5></a></li>
-					<li><a href="https://frm.li/presskitgit"><h5 class="uppercase mb16 fade-on-hover">Presskit</h5></a></li>
-					<li><a href="#nothing"><h5 class="uppercase mb16 fade-on-hover"></h5></a></li>
+					<li><a href="https://blog.fermiumlabs.com/"><h5 class="uppercase mb16 hvr-grow">Blog</h5></a></li>
+					<li><a href="https://frm.li/presskitgit"><h5 class="uppercase mb16 hvr-grow">Presskit</h5></a></li>
+					<li><a href="#nothing"><h5 class="uppercase mb16 hvr-grow"></h5></a></li>
 				</ul>
 			</div>
 		
@@ -41,8 +42,9 @@
 	
 		<div class="row fade-half">
 			<div class="col-sm-12 text-center">
-				<span>© Copyright 2015 Fermium LABS - All Rights Reserved</span>
+				<span>© Copyright 2016 Fermium LABS - All Rights Reserved</span>
 			</div>
 		</div>
 	</div>
+
 </footer>
