--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -31,11 +31,11 @@
 		
 			<div class="col-md-4 col-md-offset-2 col-sm-4">
 				<p class="lead">Follow Us</p>
-				<ul class="list-inline social-list">
-					<li><a href="#nothing"><i class="ti-twitter-alt"></i></a></li>
-					<li><a href="#nothing"><i class="ti-facebook"></i></a></li>
-					<li><a href="#nothing"><i class="ti ti-linkedin"></i></a></li>
-					<li><a href="#nothing"><i class="ti-instagram"></i></a></li>
+				<ul class="list-inline social-list ">
+					<li><a class="hvr-grow" href="#nothing"><i class="ti-twitter-alt"></i></a></li>
+					<li><a class="hvr-grow"  href="#nothing"><i class="ti-facebook"></i></a></li>
+					<li><a class="hvr-grow" href="#nothing"><i class="ti ti-linkedin"></i></a></li>
+					<li><a class="hvr-grow" href="#nothing"><i class="ti-instagram"></i></a></li>
 				</ul>
 			</div>
 		</div>
