--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -33,9 +33,9 @@
 						</svg>
 					</a>
 					<ul class="mb40 mb-xs-24">
-						<li class="fade-on-hover"><a href="./index.html"><h5 class="uppercase mb8">Home</h5></a></li>
-						<li class="fade-on-hover"><a href="./about-us.html"><h5 class="uppercase mb8">About Us</h5></a></li>
-						<li class="fade-on-hover"><a href="#nothing"><h5 class="uppercase mb8">Contacts</h5></a></li>
+						<li class="fade-on-hover hvr-grow"><a href="./index.html"><h5 class="uppercase mb8">Home</h5></a></li>
+						<li class="fade-on-hover hvr-grow"><a href="./about-us.html"><h5 class="uppercase mb8">About Us</h5></a></li>
+						<li class="fade-on-hover hvr-grow"><a href="#nothing"><h5 class="uppercase mb8">Contacts</h5></a></li>
 					</ul>
 
 				</div>
