--- a/Websites/fermiumlabs_com/css/hover-min.css
+++ b/Websites/fermiumlabs_com/css/hover-min.css
@@ -12,7 +12,7 @@
  */
 
 .hvr-grow {
-  display: inline-block;
+  display: block;
   vertical-align: middle;
   -webkit-transform: translateZ(0);
   transform: translateZ(0);
