--- a/Websites/fermiumlabs_com/css/custom.css
+++ b/Websites/fermiumlabs_com/css/custom.css
@@ -242,3 +242,37 @@ a:hover{
 .policy-line{
 	margin-left:25%;
 }
+
+
+.page-title-3 {
+	height:300px;
+}
+
+.overlay-frm:before{
+	  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #eb274a;
+  opacity: 0.4;
+  z-index: 2;
+}
+
+
+video#bgvid { 
+ 
+position: fixed; right: 0; bottom: 0;
+ 
+min-width: 100%; min-height: 100%;
+ 
+width: auto; height: auto; z-index: -100; 
+ 
+background-size: cover; 
+ 
+z-index: 0;
+ 
+}
+
+video { display: block; } 
