--- a/Websites/fermiumlabs_com/_layouts/error.html
+++ b/Websites/fermiumlabs_com/_layouts/error.html
@@ -7,9 +7,12 @@
 
     <div class="page-content">
       <div class="wrapper">
+        <div class="error-div text-center">
+          <h1 id="main-error-message"></h1>
+          <h2 id="secondary-error-message"></h2>
+      </div>
         {{ content }}
-        <h1 id="main-error-message"></h1>
-        <h2 id="secondary-error-message"></h2>
+        
       </div>
     </div>    
   </body>
