--- a/Websites/fermiumlabs_com/_layouts/error.html
+++ b/Websites/fermiumlabs_com/_layouts/error.html
@@ -6,10 +6,12 @@
   <body class="animate-in">
 
     <div class="page-content">
-      <div class="wrapper">
-        <div class="error-div text-center">
+      <div class="wrapper ">
+        <div class="error-div text-center vcenter">
           <h1 id="main-error-message"></h1>
           <h2 id="secondary-error-message"></h2>
+          <h3 id="home-return">Click <a href="./index.html" class="link">here</a> to return to our home page</h3>
+          <h4 >Or just stay here and enjoy the goat, we will not judge you</h4>
       </div>
         {{ content }}
         
