--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -13,5 +13,6 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+        <script src="https://use.fontawesome.com/5a2e728451.js"></script>
         {% include new_includes.html %}
 </head>
