--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -16,7 +16,7 @@
 				<ul>
 					<li><a href="./index.html"><h5 class="uppercase mb16 hvr-grow">Home</h5></a></li>
 					<li><a href="./about-us.html"><h5 class="uppercase mb16 hvr-grow">About Us</h5></a></li>
-					<li><a href="./contacts.html"><h5 class="uppercase mb16 hvr-grow">Contacts</h5></a></li>
+					<li><a href="./contact-us.html"><h5 class="uppercase mb16 hvr-grow">Contacts</h5></a></li>
 					<li><a href="#nothing"><h5 class="uppercase mb16 hvr-grow">Projects</h5></a></li>
 				</ul>
 			</div>
