cookie policy added

--- a/Websites/fermiumlabs_com/_layouts/default.html
+++ b/Websites/fermiumlabs_com/_layouts/default.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+  
+  
   {% include head.html %}
-
+  {% include cookieconsent.html %}
+  </head>
   <body class="animate-in">
 
     {% include header.html %}
