--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -2,12 +2,10 @@
 
 
 
-	<nav class="absolute transparent">
+	<nav class="absolute {% if page.menu %}{{ page.menu | escape }}{% else %}{{ 'transparent' | escape }}{% endif %}">
 			<div class="nav-bar">
 				<div class="module left">
 					<a href="index.html">
-						<!--<img class="logo logo-light" alt="Foundry" src="img/logos/horizontal-white.svg">
-						<img class="logo logo-dark" alt="Foundry" src="img/logos/horizontal.svg">-->
 						<svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-light">
 							<image xlink:href="img/logos/text-only-white.svg" width="100%" height="100%"/>
 						</svg>
