--- a/Websites/fermiumlabs_com/css/ytplayer.css
+++ b/Websites/fermiumlabs_com/css/ytplayer.css
@@ -201,17 +201,17 @@
 
 /*RASTER OVERLAY*/
 .YTPOverlay.raster{
-  background: url("../images/raster.png");
+  background: url("../img/raster.png");
 }
 
 .YTPOverlay.raster.retina{
-  background: url("../images/raster@2x.png");
+  background: url("../img/raster@2x.png");
 }
 
 .YTPOverlay.raster-dot{
-  background: url("../images/raster_dot.png");
+  background: url("../img/raster_dot.png");
 }
 
 .YTPOverlay.raster-dot.retina{
-  background: url("../images/raster_dot@2x.png");
+  background: url("../img/raster_dot@2x.png");
 }
