--- a/Websites/fermiumlabs_com/_layouts/page.html
+++ b/Websites/fermiumlabs_com/_layouts/page.html
@@ -1,14 +1,34 @@
+--- 
+layout: default 
 ---
-layout: default
----
-<article class="post">
+<style>
+    section a {
+        color: #eb274a;
+        opacity: 0.5;
+    }
+    
+    section a:hover {
+        color: #eb274a;
+        opacity: 1;
+    }
+    
+    section h1,
+    h2,
+    h3 {
+        text-align: center;
+    }
+    
+    .container {
+        padding-left: 50px;
+        padding-right: 50px;
+    }
+</style>
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
-  </header>
+<div class="main-container ">
+    <section>
+        <div class="container">
 
-  <div class="post-content">
-    {{ content }}
-  </div>
-
-</article>
+            {{ content }}
+        </div>
+    </section>
+</div>
