wip on some things, fixed inoffice not working on staing

--- a/Websites/fermiumlabs_com/_includes/cookieconsent.html
+++ b/Websites/fermiumlabs_com/_includes/cookieconsent.html
@@ -1,8 +1,75 @@
-<!-- Begin Cookie Consent plugin by Silktide - http://silktide.com/cookieconsent -->
-<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.10/cookieconsent.min.js"></script>
-<script type="text/javascript">
-    window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website","dismiss":"Got it!","learnMore":"More info","link":"./cookie-policy.html","theme":"dark-bottom"};
+<div class="modal-strip bg-white ">         
+ <div class="container">
+  <div class="row">
+   <div class="col-sm-12 overflow-hidden">
+    <i class="ti-info-alt icon icon-sm pull-left color-primary"></i>
+    <p class="mb0 pull-left">Hey there user, our site uses cookies and by continuing to browse, you're agreeing to our <a class="cookie-link" href="./cookie-policy.html">terms of service</a></p>
+   </div>
+  </div>
+ </div>
+ <a class="btn btn-sm close-modal ">Ok, I agree</a>
+</div>
+<script>
+// Creare's 'Implied Consent' EU Cookie Law Banner v:2.4
+// Conceived by Robert Kent, James Bavington & Tom Foyster
+ 
+var dropCookie = true;                      // false disables the Cookie, allowing you to style the banner
+var cookieDuration = 14;                    // Number of days before the cookie expires, and the banner reappears
+var cookieName = 'complianceCookie';        // Name of our cookie
+var cookieValue = 'on';                     // Value of cookie
+ 
+function createDiv(){
+    var bodytag = document.getElementsByTagName('body')[0];
+    var div = document.createElement('div');
+    div.setAttribute('id','cookie-law');
+    div.innerHTML = '<p>Our website uses cookies. By continuing we assume your permission to deploy cookies, as detailed in our <a href="/privacy-cookies-policy/" rel="nofollow" title="Privacy &amp; Cookies Policy">privacy and cookies policy</a>. <a class="close-cookie-banner" href="javascript:void(0);" onclick="removeMe();"><span>X</span></a></p>';    
+ // Be advised the Close Banner 'X' link requires jQuery
+     
+    bodytag.appendChild(div); // Adds the Cookie Law Banner just before the closing </body> tag
+    // or
+    //bodytag.insertBefore(div,bodytag.firstChild); // Adds the Cookie Law Banner just after the opening <body> tag
+     
+    document.getElementsByTagName('body')[0].className+=' cookiebanner'; //Adds a class tothe <body> tag when the banner is visible
+     
+    createCookie(window.cookieName,window.cookieValue, window.cookieDuration); // Create the cookie
+}
+ 
+ 
+function createCookie(name,value,days) {
+    if (days) {
+        var date = new Date();
+        date.setTime(date.getTime()+(days*24*60*60*1000)); 
+        var expires = "; expires="+date.toGMTString(); 
+    }
+    else var expires = "";
+    if(window.dropCookie) { 
+        document.cookie = name+"="+value+expires+"; path=/"; 
+    }
+}
+ 
+function checkCookie(name) {
+    var nameEQ = name + "=";
+    var ca = document.cookie.split(';');
+    for(var i=0;i < ca.length;i++) {
+        var c = ca[i];
+        while (c.charAt(0)==' ') c = c.substring(1,c.length);
+        if (c.indexOf(nameEQ) == 0) return c.substring(nameEQ.length,c.length);
+    }
+    return null;
+}
+ 
+function eraseCookie(name) {
+    createCookie(name,"",-1);
+}
+ 
+window.onload = function(){
+    if(checkCookie(window.cookieName) != window.cookieValue){
+        createDiv(); 
+    }
+}
+
+function removeMe(){
+	var element = document.getElementById('cookie-law');
+	element.parentNode.removeChild(element);
+}
 </script>
-
-
-<!-- End Cookie Consent plugin -->
