cookie consent fixed

--- a/Websites/fermiumlabs_com/_includes/cookieconsent.html
+++ b/Websites/fermiumlabs_com/_includes/cookieconsent.html
@@ -1,14 +1,3 @@
-<div class="modal-strip bg-white ">         
- <div class="container">
-  <div class="row">
-   <div class="col-sm-12 overflow-hidden">
-    <i class="ti-info-alt icon icon-sm pull-left color-primary"></i>
-    <p class="mb0 pull-left">Hey there user, our site uses cookies and by continuing to browse, you're agreeing to our <a class="cookie-link" href="./cookie-policy.html">terms of service</a></p>
-   </div>
-  </div>
- </div>
- <a class="btn btn-sm close-modal ">Ok, I agree</a>
-</div>
 <script>
 // Creare's 'Implied Consent' EU Cookie Law Banner v:2.4
 // Conceived by Robert Kent, James Bavington & Tom Foyster
@@ -19,19 +8,7 @@ var cookieName = 'complianceCookie';        // Name of our cookie
 var cookieValue = 'on';                     // Value of cookie
  
 function createDiv(){
-    var bodytag = document.getElementsByTagName('body')[0];
-    var div = document.createElement('div');
-    div.setAttribute('id','cookie-law');
-    div.innerHTML = '<p>Our website uses cookies. By continuing we assume your permission to deploy cookies, as detailed in our <a href="/privacy-cookies-policy/" rel="nofollow" title="Privacy &amp; Cookies Policy">privacy and cookies policy</a>. <a class="close-cookie-banner" href="javascript:void(0);" onclick="removeMe();"><span>X</span></a></p>';    
- // Be advised the Close Banner 'X' link requires jQuery
-     
-    bodytag.appendChild(div); // Adds the Cookie Law Banner just before the closing </body> tag
-    // or
-    //bodytag.insertBefore(div,bodytag.firstChild); // Adds the Cookie Law Banner just after the opening <body> tag
-     
-    document.getElementsByTagName('body')[0].className+=' cookiebanner'; //Adds a class tothe <body> tag when the banner is visible
-     
-    createCookie(window.cookieName,window.cookieValue, window.cookieDuration); // Create the cookie
+   $('.cookie-accept').click(createCookie(window.cookieName,window.cookieValue, window.cookieDuration)); // Create the cookie
 }
  
  
@@ -66,6 +43,9 @@ window.onload = function(){
     if(checkCookie(window.cookieName) != window.cookieValue){
         createDiv(); 
     }
+	else{
+		$('.modal-strip').css('display','none');
+	}
 }
 
 function removeMe(){
@@ -73,3 +53,14 @@ function removeMe(){
 	element.parentNode.removeChild(element);
 }
 </script>
+<div class="modal-strip bg-white">         
+ <div class="container">
+  <div class="row">
+   <div class="col-sm-12 overflow-hidden">
+    <i class="ti-info-alt icon icon-sm pull-left color-primary"></i>
+    <p class="mb0 pull-left">Hey there user, our site uses cookies and by continuing to browse, you're agreeing to our <a class="cookie-link" href="./cookie-policy.html">terms of service</a></p>
+   </div>
+  </div>
+ </div>
+ <a class="btn btn-sm close-modal cookie-accept">Ok, I agree</a>
+</div>
