--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -5,7 +5,7 @@
 			<div class="col-sm-12">
 				<a href="#">
 					<svg style="width:100%;height:auto;max-height:100px" preserveAspectRatio="xMidYMid meet"  class="image-xxs">
-							<image xlink:href="img/logos/atom-white.svg" width="100%" height="100%"/>
+							<image xlink:href="/Assets/img/logos/atom-white.svg" width="100%" height="100%"/>
 						</svg>
 					
 				</a>
