plentiful fixations, enought to make Freud happy

--- a/Websites/fermiumlabs_com/_includes/cookieconsent.html
+++ b/Websites/fermiumlabs_com/_includes/cookieconsent.html
@@ -58,7 +58,7 @@ function removeMe(){
   <div class="row">
    <div class="col-sm-12 overflow-hidden">
     <i class="ti-info-alt icon icon-sm pull-left color-primary"></i>
-    <p class="mb0 pull-left">Hey there user, our site uses cookies and by continuing to browse, you're agreeing to our <a class="cookie-link" href="./cookie-policy.html">terms of service</a></p>
+    <p class="mb0 pull-left">Hey there user, our site uses cookies and by continuing to browse, you're agreeing to our <a class="cookie-link" href="/cookie-policy.html">terms of service</a></p>
    </div>
   </div>
  </div>
