--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -14,9 +14,9 @@
 		<div class="row mb64 mb-xs-24">
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="./index.html"><h5 class="uppercase mb16 hvr-grow">Home</h5></a></li>
-					<li><a href="./about-us.html"><h5 class="uppercase mb16 hvr-grow">About Us</h5></a></li>
-					<li><a href="./contact-us.html"><h5 class="uppercase mb16 hvr-grow">Contacts</h5></a></li>
+					<li><a href="/"><h5 class="uppercase mb16 hvr-grow">Home</h5></a></li>
+					<li><a href="/about-us.html"><h5 class="uppercase mb16 hvr-grow">About Us</h5></a></li>
+					<li><a href="/contact-us.html"><h5 class="uppercase mb16 hvr-grow">Contacts</h5></a></li>
 					<li><a href="#"><h5 class="uppercase mb16 hvr-grow">Projects</h5></a></li>
 				</ul>
 			</div>
