--- a/Websites/fermiumlabs_com/_includes/header.html
+++ b/Websites/fermiumlabs_com/_includes/header.html
@@ -5,7 +5,7 @@
 	<nav class="absolute {% if page.menu %}{{ page.menu | escape }}{% else %}{{ 'transparent' | escape }}{% endif %}">
 			<div class="nav-bar">
 				<div class="module left">
-					<a href="index.html">
+					<a href="/">
 						<svg style="width:auto; height:auto;max-height:50px" preserveAspectRatio="xMidYMid meet"  class="logo logo-light">
 							<image xlink:href="/Assets/img/logos/text-only-white.svg" width="100%" height="100%"/>
 						</svg>
@@ -31,9 +31,9 @@
 						</svg>
 					</a>
 					<ul class="mb40 mb-xs-24">
-						<li class="fade-on-hover hvr-grow"><a href="./index.html"><h5 class="uppercase mb8">Home</h5></a></li>
-						<li class="fade-on-hover hvr-grow"><a href="./about-us.html"><h5 class="uppercase mb8">About Us</h5></a></li>
-						<li class="fade-on-hover hvr-grow"><a href="./contact-us.html"><h5 class="uppercase mb8">Contacts</h5></a></li>
+						<li class="fade-on-hover hvr-grow"><a href="/"><h5 class="uppercase mb8">Home</h5></a></li>
+						<li class="fade-on-hover hvr-grow"><a href="/about-us.html"><h5 class="uppercase mb8">About Us</h5></a></li>
+						<li class="fade-on-hover hvr-grow"><a href="/contact-us.html"><h5 class="uppercase mb8">Contacts</h5></a></li>
 					</ul>
 
 				</div>
