--- a/Websites/fermiumlabs_com/Assets/css/custom.css
+++ b/Websites/fermiumlabs_com/Assets/css/custom.css
@@ -6,6 +6,9 @@
 4. Animations
 **/
 /** 1. Navigator **/
+nav.transparent {
+  background: none; }
+
 nav.fixed.reveal-nav {
   position: fixed;
   visibility: visible;
@@ -30,6 +33,9 @@ nav.outOfSight {
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
   overflow: hidden; }
+
+.offscreen-container li.hvr-grow {
+  display: block; }
 
 .offscreen-container.reveal-nav {
   transform: translate3d(299.8%, 0, 0);
