--- a/Websites/fermiumlabs_com/Assets/sass/custom.scss
+++ b/Websites/fermiumlabs_com/Assets/sass/custom.scss
@@ -8,7 +8,9 @@
 /** 1. Navigator **/
 
 
-
+nav.transparent {
+ background: none;
+}
 nav.fixed.reveal-nav{
 	position:fixed;
 	visibility:visible;
@@ -33,6 +35,10 @@ nav.outOfSight{
   -webkit-transition: all 0.4s ease;
   -moz-transition: all 0.4s ease;
   overflow: hidden;
+}
+
+.offscreen-container li.hvr-grow{
+  display:block;
 }
 .offscreen-container.reveal-nav {
   transform: translate3d(299.8%, 0, 0);
