--- a/Websites/fermiumlabs_com/Assets/less/theme.less
+++ b/Websites/fermiumlabs_com/Assets/less/theme.less
@@ -676,10 +676,10 @@ select:active, select:focus, select:hover{ outline: none; border: none; }
 form.thirds input, form.thirds button{ width: 32%; float: left; margin-left: 1%; margin-bottom: 16px; }
 form.halves input, form.halves button{ width: 46%; float: left; margin-left: 2.5%; margin-bottom: 16px; }
 form.halves p, form.thirds p, form.halves span, form.thirds span{ clear: both; }
-.form-error, .form-success{ background: #58ce38; padding: 12px; width: 80%; color: #fff; clear: both; display: block; max-width: 700px; position: relative; top: 16px; margin: 0 auto; word-break: break-word;}
+/*.form-error, .form-success{ background: #58ce38; padding: 12px; width: 80%; color: #fff; clear: both; display: block; max-width: 700px; position: relative; top: 16px; margin: 0 auto; word-break: break-word;}
 .form-error{ background: #ce3838; }
 .form-error a, .form-success a{ display: block; color: #fff; }
-.attempted-submit .field-error{ outline: 1px solid #ce3838 !important; }
+.attempted-submit .field-error{ outline: 1px solid #ce3838 !important; }*/
 
 form iframe.mail-list-form{ display: none;}
 
