--- a/Websites/fermiumlabs_com/_includes/cookieconsent.html
+++ b/Websites/fermiumlabs_com/_includes/cookieconsent.html
@@ -1,29 +1,29 @@
 <script>
 // Creare's 'Implied Consent' EU Cookie Law Banner v:2.4
 // Conceived by Robert Kent, James Bavington & Tom Foyster
- 
+
 var dropCookie = true;                      // false disables the Cookie, allowing you to style the banner
 var cookieDuration = 14;                    // Number of days before the cookie expires, and the banner reappears
 var cookieName = 'complianceCookie';        // Name of our cookie
 var cookieValue = 'on';                     // Value of cookie
- 
+
 function createDiv(){
    $('.cookie-accept').click(createCookie(window.cookieName,window.cookieValue, window.cookieDuration)); // Create the cookie
 }
- 
- 
+
+
 function createCookie(name,value,days) {
     if (days) {
         var date = new Date();
-        date.setTime(date.getTime()+(days*24*60*60*1000)); 
-        var expires = "; expires="+date.toGMTString(); 
+        date.setTime(date.getTime()+(days*24*60*60*1000));
+        var expires = "; expires="+date.toGMTString();
     }
     else var expires = "";
-    if(window.dropCookie) { 
-        document.cookie = name+"="+value+expires+"; path=/"; 
+    if(window.dropCookie) {
+        document.cookie = name+"="+value+expires+"; path=/";
     }
 }
- 
+
 function checkCookie(name) {
     var nameEQ = name + "=";
     var ca = document.cookie.split(';');
@@ -34,17 +34,17 @@ function checkCookie(name) {
     }
     return null;
 }
- 
+
 function eraseCookie(name) {
     createCookie(name,"",-1);
 }
- 
+
 window.onload = function(){
     if(checkCookie(window.cookieName) != window.cookieValue){
-        createDiv(); 
+        createDiv();
     }
 	else{
-		$('.modal-strip').css('display','none');
+		$('.cookie-strip').css('display','none');
 	}
 }
 
@@ -53,7 +53,7 @@ function removeMe(){
 	element.parentNode.removeChild(element);
 }
 </script>
-<div class="modal-strip bg-white">         
+<div class="modal-strip bg-white cookie-strip">         
  <div class="container">
   <div class="row">
    <div class="col-sm-12 overflow-hidden">
