--- a/Websites/fermiumlabs_com/Assets/less/theme.less
+++ b/Websites/fermiumlabs_com/Assets/less/theme.less
@@ -298,9 +298,10 @@ ul.lead li{ font-size: 16px; line-height: 40px; }
 @trublu: #60c5a7;
 @adventure: #91A05C;
 @resume: #13181D;
+@fermium: #eb274a;
 
 
-@color-primary: @green;
+@color-primary: @fermium;
 @bg-secondary: #f8f8f8;
 @bg-dark: #292929;
 .bg-primary{ background: @color-primary !important; }
