fixed social icons

--- a/Websites/fermiumlabs_com/Assets/sass/custom.scss
+++ b/Websites/fermiumlabs_com/Assets/sass/custom.scss
@@ -415,3 +415,12 @@ width: 50%;
 .hide-cookie-modal{
 	visibility:hidden;
 }
+
+.social-list a{
+color:#fff;
+opacity:0.5;
+}
+.social-list a:hover{
+color:#fff;
+opacity:1;
+}
