--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -1,13 +1,13 @@
 <footer class="footer-2 bg-fl pt96 pt-xs-40">
-	
+
 	<div class="container">
 		<div class="row mb64 mb-xs-24">
 			<div class="col-sm-12">
-				<a href="#">
+				<a href="#top">
 					<svg style="width:100%;height:auto;max-height:100px" preserveAspectRatio="xMidYMid meet"  class="image-xxs">
 							<image xlink:href="/Assets/img/logos/atom-white.svg" width="100%" height="100%"/>
 						</svg>
-					
+
 				</a>
 			</div>
 		</div>
@@ -17,29 +17,28 @@
 					<li><a href="/"><h5 class="uppercase mb16 hvr-grow">Home</h5></a></li>
 					<li><a href="/about-us.html"><h5 class="uppercase mb16 hvr-grow">About Us</h5></a></li>
 					<li><a href="/contact-us.html"><h5 class="uppercase mb16 hvr-grow">Contacts</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 hvr-grow">Projects</h5></a></li>
+					<li><a href="#"><h5 class="uppercase hidden mb16 hvr-grow">Projects</h5></a></li>
 				</ul>
 			</div>
-		
+
 			<div class="col-md-3 col-sm-4">
 				<ul>
-					<li><a href="https://blog.fermiumlabs.com/"><h5 class="uppercase mb16 hvr-grow">Blog</h5></a></li>
-					<li><a href="https://frm.li/presskitgit"><h5 class="uppercase mb16 hvr-grow">Presskit</h5></a></li>
-					<li><a href="#"><h5 class="uppercase mb16 hvr-grow"></h5></a></li>
+					<li><a href="https://blog.fermiumlabs.com/" target="_blank"><h5 class="uppercase mb16 hvr-grow">Blog</h5></a></li>
+					<li><a href="https://frm.li/presskitgit" target="_blank"><h5 class="uppercase mb16 hvr-grow">Presskit</h5></a></li>
 				</ul>
 			</div>
-		
+
 			<div class="col-md-4 col-md-offset-2 col-sm-4">
 				<p class="lead">Follow Us</p>
 				<ul class="list-inline social-list ">
-					<li><a class="hvr-grow" href="#"><i class="ti-twitter-alt"></i></a></li>
-					<li><a class="hvr-grow"  href="#"><i class="ti-facebook"></i></a></li>
-					<li><a class="hvr-grow" href="#"><i class="ti ti-linkedin"></i></a></li>
-					<li><a class="hvr-grow" href="#"><i class="ti-instagram"></i></a></li>
+					<li><a class="hvr-grow" href="https://twitter.com/fermiumlabs" target="_blank"><i class="ti-twitter-alt"></i></a></li>
+					<li><a class="hvr-grow"  href="https://www.facebook.com/fermiumlabs" target="_blank"><i class="ti-facebook"></i></a></li>
+					<li><a class="hvr-grow" href="https://www.linkedin.com/company/fermium-labs" target="_blank"><i class="ti ti-linkedin"></i></a></li>
+					<li><a class="hvr-grow" href="https://www.instagram.com/fermiumlabs/" target="_blank"><i class="ti-instagram"></i></a></li>
 				</ul>
 			</div>
 		</div>
-	
+
 		<div class="row fade-half">
 			<div class="col-sm-12 text-center">
 				<span>© Copyright 2016 Fermium LABS - All Rights Reserved</span>
