--- a/Websites/fermiumlabs_com/_layouts/default.html
+++ b/Websites/fermiumlabs_com/_layouts/default.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
-  
+
+
   {% include head.html %}
   <script>
   var isMobile = false; //initiate as false
@@ -11,7 +11,7 @@ if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine
 
   </script>
   </head>
-  <body class="animate-in">
+  <body class="animate-in thin">
 
     {% include header.html %}
 
@@ -23,7 +23,7 @@ if(/(android|bb\d+|meego).+mobile|avantgo|bada\/|blackberry|blazer|compal|elaine
 
     {% include footer.html %}
     {% include scripts.html %}
-{% include cookieconsent.html %}    
+{% include cookieconsent.html %}
   </body>
 
 </html>
