--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -41,7 +41,7 @@
 
 		<div class="row fade-half">
 			<div class="col-sm-12 text-center">
-				<span>© Copyright 2016 Fermium LABS - All Rights Reserved</span>
+				<span>© Copyright 2016 Fermium LABS srl - All Rights Reserved</span>
 			</div>
 		</div>
 	</div>
