--- a/Websites/fermiumlabs_com/Assets/less/theme.less
+++ b/Websites/fermiumlabs_com/Assets/less/theme.less
@@ -271,7 +271,7 @@ blockquote .author{ font-size: 12px; display: block; float: right; margin-top: 1
 .columns-2{ column-count: 2; -webkit-column-count: 2; }
 
 @media all and (max-width: 767px){
-	br{ display: none; }
+	/*br{ display: none; }*/
 	blockquote{ font-size: 16px; line-height: 32px; }
 	.columns-2{ column-count: 1; -webkit-column-count: 1; }
 }
