android chrome tab color changed with our color, maybe

--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -6,7 +6,7 @@
         <link href="/Assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
         <link href="/Assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="/Assets/css/flexslider.css" rel="stylesheet" type="text/css" media="all" />-->
-
+        <meta name="theme-color" content="#eb274a">
         <link href="/Assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
         <link href="/Assets/css/main.css" rel="stylesheet" type="text/css" media="all" />
         <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
