--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -39,12 +39,59 @@
         <meta name="theme-color" content="#eb274a">
         <link href="/Assets/css/theme.css" rel="stylesheet" type="text/css" media="all" />
         <link href="/Assets/css/main.css" rel="stylesheet" type="text/css" media="all" />
-        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-        <link href='https://fonts.googleapis.com/css?family=Lato:300,400%7CRaleway:100,400,300,500,600,700%7COpen+Sans:400,500,600' rel='stylesheet' type='text/css'>
-        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
+        <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css' async>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css" async>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
-        <script src="https://use.fontawesome.com/5a2e728451.js"></script>
+        <script src="https://use.fontawesome.com/5a2e728451.js" async></script>
 
-        {% include new_includes.html %}
+        <!--NOTIFICATIONS AND FAVICON-->
+            <link rel="manifest" href="https://fermiumlabs.com/manifest.json">
+        <!--FAVICONS-->
+            <link rel="apple-touch-icon" sizes="57x57" href="/Assets/favicon/apple-touch-icon-57x57.png">
+            <link rel="apple-touch-icon" sizes="60x60" href="/Assets/favicon/apple-touch-icon-60x60.png">
+            <link rel="apple-touch-icon" sizes="72x72" href="/Assets/favicon/apple-touch-icon-72x72.png">
+            <link rel="apple-touch-icon" sizes="76x76" href="/Assets/favicon/apple-touch-icon-76x76.png">
+            <link rel="apple-touch-icon" sizes="114x114" href="/Assets/favicon/apple-touch-icon-114x114.png">
+            <link rel="apple-touch-icon" sizes="120x120" href="/Assets/favicon/apple-touch-icon-120x120.png">
+            <link rel="apple-touch-icon" sizes="144x144" href="/Assets/favicon/apple-touch-icon-144x144.png">
+            <link rel="apple-touch-icon" sizes="152x152" href="/Assets/favicon/apple-touch-icon-152x152.png">
+            <link rel="apple-touch-icon" sizes="180x180" href="/Assets/favicon/apple-touch-icon-180x180.png">
+            <link rel="icon" type="image/png" href="/Assets/favicon/favicon-32x32.png" sizes="32x32">
+            <link rel="icon" type="image/png" href="/Assets/favicon/favicon-194x194.png" sizes="194x194">
+            <link rel="icon" type="image/png" href="/Assets/favicon/favicon-96x96.png" sizes="96x96">
+            <link rel="icon" type="image/png" href="/Assets/favicon/android-chrome-192x192.png" sizes="192x192">
+            <link rel="icon" type="image/png" href="/Assets/favicon/favicon-16x16.png" sizes="16x16">
+            <link rel="mask-icon" href="/Assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
+            <link rel="shortcut icon" href="/Assets/favicon/favicon.ico">
+            <meta name="apple-mobile-web-app-title" content="Fermium LABS">
+            <meta name="application-name" content="Fermium LABS">
+            <meta name="msapplication-TileColor" content="#da532c">
+            <meta name="msapplication-TileImage" content="/Assets/favicon/mstile-144x144.png">
+            <meta name="msapplication-config" content="/Assets/favicon/browserconfig.xml">
+            <meta name="theme-color" content="#ffffff">
+            
+        <!-- Push notifications -->
+            <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async></script>
+            <script>
+                var OneSignal = OneSignal || [];
+                OneSignal.push(["init", {
+                appId: "81205fef-6421-44c9-a579-6fe66f4451b4",
+                autoRegister: true,
+                safari_web_id: "web.onesignal.auto.10d6980b-bbad-483e-b993-08fa2a289dd8",
+                notifyButton: {
+                  enable: false /* Set to false to hide */
+                }
+                }]);
+            </script>
+            
+        <!-- Smartlook -->
+            <script type="text/javascript">
+                window.smartlook||(function(d) {
+                var o=smartlook=function(){ o.api.push(arguments)},s=d.getElementsByTagName('script')[0];
+                var c=d.createElement('script');o.api=new Array();c.async=true;c.type='text/javascript';
+                c.charset='utf-8';c.src='//rec.getsmartlook.com/bundle.js';s.parentNode.insertBefore(c,s);
+                })(document);
+                smartlook('init', 'c819aa03296b0d5c2dc4209529c9f3971dfba4f8');
+            </script>
