--- a/Websites/fermiumlabs_com/_includes/head.html
+++ b/Websites/fermiumlabs_com/_includes/head.html
@@ -2,11 +2,6 @@
  <meta charset="utf-8">
         <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!--<link href="/Assets/css/themify-icons.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="/Assets/css/custom.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="/Assets/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
-        <link href="/Assets/css/flexslider.css" rel="stylesheet" type="text/css" media="all" />-->
-
 
         <meta content="{{page.description}}" name="description">
         <!-- Google Plus -->
@@ -19,7 +14,7 @@
         <meta content="{{site.twitter_username}}" name="twitter:site">
         <meta content="{{page.title}}" name="twitter:title">
         <meta content="{{page.description}}" name="twitter:description">
-        <meta content="@fermiumlabs" name="twitter:creator">
+        <meta content="{{site.twitter_username}}" name="twitter:creator">
 
 
         <!-- Open Graph data -->
