htmlproofer now ignores linkedin

--- a/Websites/fermiumlabs_com/_includes/footer.html
+++ b/Websites/fermiumlabs_com/_includes/footer.html
@@ -33,7 +33,7 @@
 				<ul class="list-inline social-list ">
 					<li><a class="hvr-grow" href="https://twitter.com/fermiumlabs" target="_blank"><i class="ti-twitter-alt"></i></a></li>
 					<li><a class="hvr-grow"  href="https://www.facebook.com/fermiumlabs" target="_blank"><i class="ti-facebook"></i></a></li>
-					<li><a class="hvr-grow" href="https://www.linkedin.com/company/fermium-labs" target="_blank"><i class="ti ti-linkedin"></i></a></li>
+					<li><a class="hvr-grow" href="https://www.linkedin.com/company/fermium-labs" data-proofer-ignore target="_blank"><i class="ti ti-linkedin"></i></a></li>
 					<li><a class="hvr-grow" href="https://www.instagram.com/fermiumlabs/" target="_blank"><i class="ti-instagram"></i></a></li>
 				</ul>
 			</div>
